@@ -13,12 +13,12 @@ else:
     sys.exit("The %s platform is not supported yet." % sys.platform)
 
 setup(name='MusicSQL',
-      version='0.1.1',
+      version='0.1.2',
       description='MusicSQL libraries for musicology database queries',
       author='Bret Aarden',
       author_email='bret.aarden@gmail.com',
       url='http://www.musicsql.org',
-      packages=['musicsql', 'musicsql.alchemy', 'musicsql.database'],
+      packages=['musicsql', 'musicsql.database'],
       package_data={'musicsql': ['CONFIG', 'dtd/*']},
       data_files=[(path, ['scripts/musicsqlcmd.py'])]
       )
