@@ -17,6 +17,8 @@ MusicSQL changelog
 - Fixed errors in add_quality.py.
 - Added a PC column to the notes table.
 - Fixed --preview to work with all scripts.
+- Fixed compatibility problems with Python 2.6, PostgreSQL, Windows
+- Fixed the setup.py script.
 
 0.1.1: July 15, 2009
 - Reverted to simple Python Distutils installer.
